# fader-locks

./: .gitignore  CMakeLists.txt  INSTALL-WINDOWS.txt  README.md
.github/workflows/: build.yml
src/: GlobalStep.cpp  GlobalStep.h  NotchedFader.cpp  NotchedFader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
